--- a/main_app/templates/tasks/index.html
+++ b/main_app/templates/tasks/index.html
@@ -17,30 +17,21 @@ Tasks
 
 <section class="page-header">
   <h1>Taskmaster's Work</h1>
-  <img src="{% static 'images/cool-cat.svg' %}" alt="A cool cat" />
-  <img src="{% static 'images/happy-cat.svg' %}" alt="A happy cat" />
-  <img src="{% static 'images/teacup-cat.svg' %}" alt="A cat in a teacup" />
-  <img src="{% static 'images/cat-in-box.svg' %}" alt="A cat in a box" />
 </section>
 
 <section class="card-container">
-  {% for cat in cats %}
+  {% for task in tasks %}
     <div class="card">
-      <div class="card-content">
-        <div class="card-img-container">
-          <img 
-            src="{% static 'images/sk8r-boi-cat.svg' %}" 
-            alt="A skater boy cat"
-          >
+      <a href="/tasks/{{ task.id }}">
+        <div class="card-content">
+          <div class="card-img-container">
+          </div>
+          <h2 class="card-title">{{ task.name }}</h2>
+          <p>Reward: {{ task.reward }}</p>
+          <p>Penalty: {{ task.penalty }}</p>
+          <p><small>{{ task.description }}</small></p>
         </div>
-        <h2 class="card-title">{{ cat.name }}</h2>
-        {% if cat.age > 0 %}
-          <p>A {{ cat.age }} year old {{ cat.breed }}</p>
-        {% else %}
-          <p>A {{ cat.breed }} kitten.</p>
-        {% endif %}
-        <p><small>{{ cat.description }}</small></p>
-      </div>
+      </a>
     </div>
   {% endfor %}
 </section>
