adds create task navbar link

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -29,6 +29,7 @@
     <nav>
       <ul>
         <li><a href="{% url 'tasks_index' %}">All Tasks</a></li>
+        <li><a href="{% url 'tasks_create' %}">Add a Task</a></li>
         <li><a href="{% url 'about' %}">About</a></li>
       </ul>
     </nav>
