--- a/main_app/templates/tasks/detail.html
+++ b/main_app/templates/tasks/detail.html
@@ -32,7 +32,7 @@ Details
     {% else %}
     <h2>No Penalties Listed</h2>
     {% endif %}
-    <h2>Priority: </h2>
+    <h2><span>Priority:</span> {{ task.get_priority }} </h2>
     <p>{{ task.description }}</p>
     <div class="task-actions">
       <a href="{% url 'tasks_update' task.id %}" class="btn warn">Edit</a>
