adds signup for user associates task with user

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -33,6 +33,20 @@
         <li><a href="{% url 'about' %}">About</a></li>
       </ul>
     </nav>
+    <nav>
+      <ul>
+        {% if user.is_authenticated %}
+          <li><a href="{% url 'tasks_index' %}">All Cats</a></li>
+          <li><a href="{% url 'tasks_create' %}">Add a Cat</a></li>
+          <li><a href="{% url 'about' %}">About</a></li>
+          <li><a href="{% url 'logout' %}">Log out</a></li>
+        {% else %}
+          <li><a href="{% url 'about' %}">About</a></li>
+          <li><a href="{% url 'home' %}">Login</a></li>
+          <li><a href="{% url 'signup' %}">Sign Up</a></li>
+        {% endif %}
+      </ul>
+    </nav>
   </header>
   <main>
     {% block content %}
