--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -11,6 +11,12 @@
     type="image/png"
     href="{% static 'images/splash.svg' %}"
   >
+
+  <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/apple-touch-icon.png' %}">
+  <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/favicon-32x32.png' %}">
+  <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/favicon-16x16.png' %}">
+  <link rel="manifest" href="{% static 'site.webmanifest' %}">
+  <link rel="stylesheet" href="https://use.typekit.net/qgz2xov.css">
   <title>Taskmaster: {% block title%}{% endblock %}</title>
   <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
   {% block head %}
