--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -12,13 +12,7 @@ Home
 {% block content %}
 
 <section class="logo-container">
-  <div class="task-container">
-    <img src="{% static 'images/splash.svg' %}" alt="The Taskmaster" />
-  </div>
-  <img 
-    src="{% static 'images/logotype.svg' %}" 
-    alt="Text reads: Taskmaster"
-  />
+  <h1 class="logo">The Taskmaster</h1>
 </section>
 
 {% if not user.is_authenticated %}
